# Json-recontextualization

./: .env.example  .gitignore  ADAPTATION_FLOW.md  ARCHITECTURE.md  AUDIT.md  Adapt engine.md  CLAUDE.md  CODEBASE_DOCUMENTATION.md  CONTENT_FLOW_ANALYSIS.md  CONTENT_ISSUES.md  CURRENT_ISSUES.md  DEEP_ANALYSIS.md  FIXES_REQUIRED.md  IMPLEMENTATION_SUMMARY.md  LEAF_ADAPTER_PLAN.md  Procfile  QUICKSTART.py  RAG_ICL_IMPLEMENTATION_PLAN.md  README.md  REAL_SOLUTION.md  SIMPLIFIED_ADAPTATION_PLAN.md  SYSTEM_ARCHITECTURE.md  TESTING_GUIDE.md  VALIDATION_DASHBOARD.md  VALIDATION_REPORT.md  check_validation.py  decider.md  failed10_REPORT.md  failed14_analysis.md  failed14_full_report.md  failed14_validation_report.md  failed15_summary_report.md  generate_report.py  prompt_data.md  pyproject.toml  report.txt  requirements.txt  sample_validation_report.md  shewta.md  simple_arch.md  (+18 more)
backup/: graph_nodes_backup.py  graph_state_backup.py
data/: business_facts.txt
docs/: ADAPTATION_FLOW.md  ARCHITECTURE.md  AUDIT.md  CHECKRULES.md  CODEBASE_DOCUMENTATION.md  CONTENT_FLOW_ANALYSIS.md  CONTENT_ISSUES.md  CURRENT_ISSUES.md  DEEP_ANALYSIS.md  DEEP_ARCHITECTURE_REPORT.md  FIXES_REQUIRED.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  ISSUES_TO_FIX.md  KLO_FIXER_PLAN.md  LEAF_ADAPTER_PLAN.md  PROMPT_SIMPLIFICATION.md  RAG_ICL_IMPLEMENTATION_PLAN.md  REAL_SOLUTION.md  SYSTEM_ARCHITECTURE.md  SYSTEM_ISSUES_ANALYSIS.md  TESTING_GUIDE.md  VALIDATION_DASHBOARD.md  VALIDATION_REPORT.md  codexreview.md  rachit.md  sample_validation_report.md  shewta.md
frontend/: .gitignore  README.md  (+2 more)
(+120 files in other folders)
